--- a/cocos2dx_playground/Resources/textures/texture_001.plist
+++ b/cocos2dx_playground/Resources/textures/texture_001.plist
@@ -454,6 +454,21 @@
                 <key>textureRotated</key>
                 <false/>
             </dict>
+            <key>helper_pivot.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{2,2}</string>
+                <key>spriteSourceSize</key>
+                <string>{2,2}</string>
+                <key>textureRect</key>
+                <string>{{68,282},{2,2}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
             <key>key_a.png</key>
             <dict>
                 <key>aliases</key>
@@ -465,7 +480,7 @@
                 <key>spriteSourceSize</key>
                 <string>{32,32}</string>
                 <key>textureRect</key>
-                <string>{{68,282},{32,32}}</string>
+                <string>{{72,282},{32,32}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -480,7 +495,7 @@
                 <key>spriteSourceSize</key>
                 <string>{32,32}</string>
                 <key>textureRect</key>
-                <string>{{102,282},{32,32}}</string>
+                <string>{{106,282},{32,32}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -495,7 +510,7 @@
                 <key>spriteSourceSize</key>
                 <string>{32,32}</string>
                 <key>textureRect</key>
-                <string>{{136,282},{32,32}}</string>
+                <string>{{140,282},{32,32}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -510,7 +525,7 @@
                 <key>spriteSourceSize</key>
                 <string>{32,32}</string>
                 <key>textureRect</key>
-                <string>{{170,282},{32,32}}</string>
+                <string>{{174,282},{32,32}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -525,7 +540,7 @@
                 <key>spriteSourceSize</key>
                 <string>{32,32}</string>
                 <key>textureRect</key>
-                <string>{{204,282},{32,32}}</string>
+                <string>{{208,282},{32,32}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -633,7 +648,7 @@
             <key>size</key>
             <string>{256,512}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:0928ae128c65ddc624d0d8ff994765d2:d54b4e547f62c5192af34d8347b79111:647b4f3223f85a3f89e579e670869bc1$</string>
+            <string>$TexturePacker:SmartUpdate:1ad0ee91d50edebb613b6cc92ad37da1:431546bd46d32ee750d8a24387b465d1:647b4f3223f85a3f89e579e670869bc1$</string>
             <key>textureFileName</key>
             <string>texture_001.png</string>
         </dict>
