--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -117,9 +117,6 @@
     <ClCompile Include="..\Classes\Step01_RootScene.cpp">
       <Filter>src\scene\step01</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\Step02_RootScene.cpp">
-      <Filter>src\scene\step02</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\Step01_Animation_RootScene.cpp">
       <Filter>src\scene\step01\animation</Filter>
     </ClCompile>
@@ -210,6 +207,9 @@
     <ClCompile Include="..\Classes\cpg_CollisionComponent.cpp">
       <Filter>src\cpg</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step02_RootScene.cpp">
+      <Filter>src\scene\step02</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -262,9 +262,6 @@
     </ClInclude>
     <ClInclude Include="..\Classes\Step01_RootScene.h">
       <Filter>src\scene\step01</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Step02_RootScene.h">
-      <Filter>src\scene\step02</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Step01_Animation_RootScene.h">
       <Filter>src\scene\step01\animation</Filter>
@@ -358,6 +355,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\cpg_CollisionComponent.h">
       <Filter>src\cpg</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step02_RootScene.h">
+      <Filter>src\scene\step02</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
