--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -64,6 +64,9 @@
     <Filter Include="src\cpg">
       <UniqueIdentifier>{ee264d72-c524-4e05-a8c4-f49610304426}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\scene\step02\fsm1">
+      <UniqueIdentifier>{1a9c12b1-3aa3-4477-9148-d15770dbbcfa}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -212,6 +215,9 @@
     </ClCompile>
     <ClCompile Include="..\Classes\cpg_input_KeyCodeCollector.cpp">
       <Filter>src\input</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\step02_fsm1test_BasicScene.cpp">
+      <Filter>src\scene\step02\fsm1</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -364,6 +370,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\cpg_input_KeyCodeCollector.h">
       <Filter>src\input</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step02_fsm1test_BasicScene.h">
+      <Filter>src\scene\step02\fsm1</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
