add : fsm1 - state, machine

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -67,6 +67,9 @@
     <Filter Include="src\scene\step02\fsm1">
       <UniqueIdentifier>{1a9c12b1-3aa3-4477-9148-d15770dbbcfa}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\fsm1">
+      <UniqueIdentifier>{883a7dff-b905-40e3-b5b4-65effc8c3abf}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -218,6 +221,12 @@
     </ClCompile>
     <ClCompile Include="..\Classes\step02_fsm1test_BasicScene.cpp">
       <Filter>src\scene\step02\fsm1</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\fsm1_iState.cpp">
+      <Filter>src\fsm1</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\fsm1_Machine.cpp">
+      <Filter>src\fsm1</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -373,6 +382,12 @@
     </ClInclude>
     <ClInclude Include="..\Classes\step02_fsm1test_BasicScene.h">
       <Filter>src\scene\step02\fsm1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\fsm1_iState.h">
+      <Filter>src\fsm1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\fsm1_Machine.h">
+      <Filter>src\fsm1</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
