--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -164,6 +164,8 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\CPG_InputTest_KeyMapConfigHelper.cpp" />
     <ClCompile Include="..\Classes\CPG_Setting.cpp" />
     <ClCompile Include="..\Classes\EntryScene.cpp" />
+    <ClCompile Include="..\Classes\fsm1_iState.cpp" />
+    <ClCompile Include="..\Classes\fsm1_Machine.cpp" />
     <ClCompile Include="..\Classes\Research_Input_GamePadTest.cpp" />
     <ClCompile Include="..\Classes\Step01_Animation_BasicScene.cpp" />
     <ClCompile Include="..\Classes\Step01_Animation_CallbackScene.cpp" />
@@ -217,6 +219,8 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\CPG_InputTest_KeyMapConfigHelper.h" />
     <ClInclude Include="..\Classes\CPG_Setting.h" />
     <ClInclude Include="..\Classes\EntryScene.h" />
+    <ClInclude Include="..\Classes\fsm1_iState.h" />
+    <ClInclude Include="..\Classes\fsm1_Machine.h" />
     <ClInclude Include="..\Classes\Research_Input_GamePadTest.h" />
     <ClInclude Include="..\Classes\Step01_Animation_BasicScene.h" />
     <ClInclude Include="..\Classes\Step01_Animation_CallbackScene.h" />
