add scene : step 02 - game - rain of chaos - title scene

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -197,6 +197,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step02_collision_BasicScene.cpp" />
     <ClCompile Include="..\Classes\step02_collision_CollectionScene.cpp" />
     <ClCompile Include="..\Classes\step02_fsm1test_BasicScene.cpp" />
+    <ClCompile Include="..\Classes\step02_game_rain_of_chaos_TitleScene.cpp" />
     <ClCompile Include="..\Classes\step02_input_KeyCodeCollectScene.cpp" />
     <ClCompile Include="..\Classes\step02_RootScene.cpp" />
     <ClCompile Include="..\Classes\Step99_RootScene.cpp" />
@@ -252,6 +253,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step02_collision_BasicScene.h" />
     <ClInclude Include="..\Classes\step02_collision_CollectionScene.h" />
     <ClInclude Include="..\Classes\step02_fsm1test_BasicScene.h" />
+    <ClInclude Include="..\Classes\step02_game_rain_of_chaos_TitleScene.h" />
     <ClInclude Include="..\Classes\step02_input_KeyCodeCollectScene.h" />
     <ClInclude Include="..\Classes\step02_RootScene.h" />
     <ClInclude Include="..\Classes\Step99_RootScene.h" />
