--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -196,6 +196,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step02_button_DragScene.cpp" />
     <ClCompile Include="..\Classes\step02_collision_BasicScene.cpp" />
     <ClCompile Include="..\Classes\step02_collision_CollectionScene.cpp" />
+    <ClCompile Include="..\Classes\step02_fsm1test_AnimationControlScene.cpp" />
     <ClCompile Include="..\Classes\step02_fsm1test_BasicScene.cpp" />
     <ClCompile Include="..\Classes\step02_game_rain_of_chaos_TitleScene.cpp" />
     <ClCompile Include="..\Classes\step02_input_KeyCodeCollectScene.cpp" />
@@ -252,6 +253,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step02_button_DragScene.h" />
     <ClInclude Include="..\Classes\step02_collision_BasicScene.h" />
     <ClInclude Include="..\Classes\step02_collision_CollectionScene.h" />
+    <ClInclude Include="..\Classes\step02_fsm1test_AnimationControlScene.h" />
     <ClInclude Include="..\Classes\step02_fsm1test_BasicScene.h" />
     <ClInclude Include="..\Classes\step02_game_rain_of_chaos_TitleScene.h" />
     <ClInclude Include="..\Classes\step02_input_KeyCodeCollectScene.h" />
