--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -231,6 +231,9 @@
     <ClCompile Include="..\Classes\step02_animation_CallbackScene.cpp">
       <Filter>src\scene\step02\animation</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step02_fsm1test_AnimationControlScene.cpp">
+      <Filter>src\scene\step02\fsm1test</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -394,6 +397,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\step02_animation_CallbackScene.h">
       <Filter>src\scene\step02\animation</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step02_fsm1test_AnimationControlScene.h">
+      <Filter>src\scene\step02\fsm1test</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
