--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -422,6 +422,9 @@
     <ClInclude Include="..\Classes\cpg_Animation_Index.h">
       <Filter>src\animation</Filter>
     </ClInclude>
+    <ClInclude Include="..\Classes\cpg_Animation_Info.h">
+      <Filter>src\animation</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="game.rc">
