--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -76,6 +76,9 @@
     <Filter Include="src\animation">
       <UniqueIdentifier>{1257b598-16f9-4be8-81d6-9e22d089a147}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\table">
+      <UniqueIdentifier>{f016cb03-47a6-4a5c-b33d-9986b9dbc156}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -244,6 +247,9 @@
       <Filter>src\animation</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\cpg_Animation_Index.cpp">
+      <Filter>src\animation</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\cpg_animation_InfoContainer.cpp">
       <Filter>src\animation</Filter>
     </ClCompile>
   </ItemGroup>
@@ -423,6 +429,9 @@
       <Filter>src\animation</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\cpg_Animation_Info.h">
+      <Filter>src\animation</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\cpg_animation_InfoContainer.h">
       <Filter>src\animation</Filter>
     </ClInclude>
   </ItemGroup>
