--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -206,6 +206,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step02_input_KeyCodeCollectScene.cpp" />
     <ClCompile Include="..\Classes\step02_RootScene.cpp" />
     <ClCompile Include="..\Classes\Step99_RootScene.cpp" />
+    <ClCompile Include="..\Classes\step_clickclick_RootScene.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -268,6 +269,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step02_input_KeyCodeCollectScene.h" />
     <ClInclude Include="..\Classes\step02_RootScene.h" />
     <ClInclude Include="..\Classes\Step99_RootScene.h" />
+    <ClInclude Include="..\Classes\step_clickclick_RootScene.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
