--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -37,9 +37,6 @@
     <Filter Include="src\scene\step01\tool">
       <UniqueIdentifier>{08dc5ddd-99c0-4d2e-9b50-9816f2ef648e}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\scene\step01\sound">
-      <UniqueIdentifier>{6acee36b-12d4-4f2b-8cbd-46abf41ed62f}</UniqueIdentifier>
-    </Filter>
     <Filter Include="src\scene\step99">
       <UniqueIdentifier>{a76eefdc-f54a-43c8-b51e-7dead6c0bd9d}</UniqueIdentifier>
     </Filter>
@@ -81,6 +78,9 @@
     </Filter>
     <Filter Include="src\scene\step_clickclick\button">
       <UniqueIdentifier>{78ebed0e-5d7e-41b2-b6aa-65f57b5c0d0c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\scene\step_clickclick\sound">
+      <UniqueIdentifier>{6acee36b-12d4-4f2b-8cbd-46abf41ed62f}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -172,7 +172,7 @@
       <Filter>src\scene\step01\game</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\Step01_Sound_Basic.cpp">
-      <Filter>src\scene\step01\sound</Filter>
+      <Filter>src\scene\step_clickclick\sound</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\Step99_RootScene.cpp">
       <Filter>src\scene\step99</Filter>
@@ -345,7 +345,7 @@
       <Filter>src\scene\step01\game</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Step01_Sound_Basic.h">
-      <Filter>src\scene\step01\sound</Filter>
+      <Filter>src\scene\step_clickclick\sound</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Step99_RootScene.h">
       <Filter>src\scene\step99</Filter>
