--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -261,6 +261,9 @@
     <ClCompile Include="..\Classes\step_clickclick_game_StageTestScene.cpp">
       <Filter>src\scene\step_clickclick\game</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_clickclick_game_Stage.cpp">
+      <Filter>src\scene\step_clickclick\game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -444,6 +447,9 @@
       <Filter>src\scene\step_clickclick\sound</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\step_clickclick_game_StageTestScene.h">
+      <Filter>src\scene\step_clickclick\game</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_clickclick_game_Stage.h">
       <Filter>src\scene\step_clickclick\game</Filter>
     </ClInclude>
   </ItemGroup>
