--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -236,6 +236,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\fsm1_iState.h" />
     <ClInclude Include="..\Classes\fsm1_Machine.h" />
     <ClInclude Include="..\Classes\Research_Input_GamePadTest.h" />
+    <ClInclude Include="..\Classes\step_clickclick_game_Constant.h" />
     <ClInclude Include="..\Classes\step_clickclick_game_TitleScene.h" />
     <ClInclude Include="..\Classes\step_clickclick_animation_BasicScene.h" />
     <ClInclude Include="..\Classes\step_clickclick_animation_PlayNStopScene.h" />
